# SingleWorld

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/soul/android/single/world/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-render.cpp
app/src/main/cpp/publish/: H264Publisher.cpp  H264Publisher.h
app/src/main/cpp/sample/: GLSampleBase.h  NV21Sample.cpp  NV21Sample.h
app/src/main/cpp/util/: ImageDef.h  LogUtil.h
app/src/main/java/com/soul/android/single/world/: DemoItemAdapter.kt  MainActivity.kt
app/src/main/java/com/soul/android/single/world/alpha/: AlphaFrameFilter.java  AlphaMovieActivity.java  AlphaMovieView.java  EFrameBufferObjectRenderer.java  EFramebufferObject.java  EPlayerRenderer.java  ESurfaceTexture.java  EglUtil.java  GLTextureView.java  GlFilter.java  GlPreviewFilter.java  VideoRenderer.java
app/src/main/java/com/soul/android/single/world/bean/: DemoItem.java
app/src/main/java/com/soul/android/single/world/camera/: CameraGLSurfaceView.kt  CameraHepler.kt  (+1 more)
app/src/main/res/drawable/: shape_item_backgroud.xml
app/src/main/res/layout/: act_camera.xml  activity_alpha_movie.xml  activity_decode.xml  activity_main.xml  activity_opengl_draw.xml  activity_texture_player.xml  item_demo.xml  widget_camera_controller.xml
app/src/main/res/values/: strings.xml
app/src/main/shaders/: camera_fragment_shader.glsl  camera_verterx_shader.glsl  vao_fragment_shader.glsl  yuv_vertex_shader.glsl
app/src/test/java/com/soul/android/single/world/: ExampleUnitTest.kt
(+57 files in other folders)
